# demoapp

./: .gitignore  CMakeLists.txt  README.md  client_test.sh
src/: can_wakeup.cpp  echo_client.cpp  echo_server.cpp  http_server_test.cpp  main.cpp  websocket_client_test.cpp  websocket_server_test.cpp
test_codegen/: CMakeLists.txt  Makefile  README.md  build.sh
test_codegen/cmake-scripts/: common-definitions.cmake  generator-cfg.cmake  helper-func.cmake  module-cfg.cmake
test_codegen/code_gen/sysm_msg_parser/: generator.py  msg_schema.json
test_codegen/code_gen/sysm_msg_parser/templates/: CMakeLists_txt.tmpl  msg_parser.cpp.mako
tools/: ws_client.py  ws_client__.py
